# bionico

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/beloncode/akane/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/beloncode/bionico/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/beloncode/hackinarm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ENV_test.h  IPA.h  IPA_Control.h  IPA_modulator.h  JNI_FrontEND.cpp  JNI_frontend.cpp  jni_frontend.cpp  runtime_resources.cpp  runtime_resources.h  slayer_logger.h
app/src/main/cpp/common/: env_test.h  references.h
app/src/main/cpp/ipa/: format.cpp  format.h  manager.h
app/src/main/java/com/beloncode/akane/: AppDBContract.java  ExternalDBContract.java  ExternalDBHelper.java  FrontLogger.java  IpaHandler.java  IpaObject.java  MainActivity.java  Storage.java  StorageDBHelper.java  StorageResolver.java
app/src/main/java/com/beloncode/bionico/: AppDBContract.java  ExternalDBContract.java  ExternalDBHelper.java  FrontLogger.java  IpaHandler.java  IpaObject.java  MainActivity.java  Storage.java  StorageDBHelper.java  (+1 more)
app/src/main/res/color/: selector.xml
app/src/main/res/drawable/: nav_color.xml
app/src/main/res/layout/: activity_main.xml  ipa_software_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  nav_values.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+24 files in other folders)
